# Faulhaber_motor-_controller

./: README.md  docker-compose.yml  dockerfile
src/faulhaber_motor_controller/: package.xml  setup.cfg  setup.py
src/faulhaber_motor_controller/config/: params.yaml
src/faulhaber_motor_controller/launch/: motor_controller_launch.py
src/faulhaber_motor_controller/src/: motor_controller_node.py
