<?xml version="1.0"?>
<package format="3">
  <name>faulhaber_motor_controller</name>
  <version>0.1.0</version>
  <description>Basic ROS2 package to control Faulhaber motor via RS232</description>
  
  <maintainer email="zkwutknkd@gmail.com">Kewei Zuo</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <!-- Export section -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

